пр8 код ревью исправления 1

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/Videohive/mesto#readme",
   "dependencies": {
-    "core-js": "^3.27.2",
-    "jquery": "^3.6.3"
+    "core-js": "^3.27.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
